@@ -1,3 +1,7 @@
+2015-01-15  Kenneth Loafman  <kenneth@loafman.com>
+
+* Fixed variable typo in commandline.py that was causing build fails.
+
 2015-01-13  Kenneth Loafman  <kenneth@loafman.com>
 
     * Merged in lp:~noizyland/duplicity/fix_azurebackend_container_names
